--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,17 @@
-tasks:
-  - init : choco install terraform
-    
+image:
+  file: .gitpod.Dockerfile
+
+tasks:      
+  - name: Workspace Initialization
+    env:
+      AWS_CLI_AUTO_PROMPT: on-partial
+
+vscode:
+  extensions:
+    - 42Crunch.vscode-openapi
+    - ms-azuretools.vscode-docker
+    - ms-python.python
+    - hashicorp.terraform
+    - redhat.ansible
+    - redhat.vscode-yaml
+    - amazonwebservices.aws-toolkit-vscode
